fix some spacing

--- a/assets/sass/components/field.scss
+++ b/assets/sass/components/field.scss
@@ -4,12 +4,6 @@
   border: none;
 }
 
-.node-type-session  {
-  .field-collection-container {
-    @include make-row();
-  }
-}
-
 .field-collection-container {
   border: none;
 }
